# chip-8

./: .gitignore  Cargo.toml  LICENSE  README.md  chip-octo.toml
src/: config.rs  cpu.rs  decode.rs  lib.rs  main.rs  opcode.rs
src/cpu/: decode.rs  timer.rs
